--- a/app/views/productions/index.html.erb
+++ b/app/views/productions/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Productions#index</h1>
-<p>Find me in app/views/productions/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<h1>Listing Productions</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Price</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @productions.each do |production| %>
+      <tr>
+        <td><%= production.title %></td>
+        <td><%= production.price %></td>
+        <td><%= link_to 'Show', production %></td>
+        <td><%= link_to 'Edit', edit_production_path(production) %></td>
+        <td><%= link_to 'Destroy', production, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Production', new_production_path %>
